hphp/test/quick/keyref_error.php.expectf
HipHop Fatal error: Key element cannot be a reference in %s on line 7
